<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">神聊对讲机</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="headicontitle">设置头像：</string>
    <string name="header">头像</string>
    <string name="set_dialog_title">信息设置</string>
    <string name="nicke_name_label">呢称:</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="current_online_label">当前在线</string>
    <string name="send_file">发送文件</string>
    <string name="send_msg">发送信息</string>
    <string name="pls_select_opr">请选择要进行的操作</string>
    <string name="call_label">语音呼叫</string>
    <string name="init_msg_count">{%1$d}</string>
    <string name="send">发送</string>
    <string name="file">文件</string>
    <string name="current_path_label">当前路径: </string>
    <string name="content_is_empty">内容为空不能发送!</string>
    <string name="waiting_for_receive_file">正在等待对方接收文件...</string>
    <string name="be_sending_file">正在发送文件</string>
    <string name="sending_file_to_you">正在给您发送文件!</string>
    <string name="accept">接收</string>
    <string name="refuse">拒绝</string>
    <string name="close">关闭</string>
    <string name="select_file_for_send">选择要发送的文件</string>
    <string name="select_path_for_save">选择用来接收文件的文件夹</string>
    <string name="data_receive_error">数据接收错误</string>
    <string name="refuse_receive_file">对方拒绝接收文件</string>
    <string name="file_send_success">文件发送成功！</string>
    <string name="file_receive_success">文件接收成功！</string>
    <string name="folder_can_not_write">文件夹不可写，无法保存文件！</string>
    <string name="ready_for_receive_file">准备接收文件</string>
    <string name="ready_for_send_file">准备发送文件</string>
    <string name="start_to_receive_file">正在接收文件</string>
    <string name="start_to_send_file">正在发送文件</string>
    <string name="talk_with">正在与{ %1$s }进行语音通话</string>
    <string name="remote_talk_closed">对方已关闭语音通话</string>
    <string name="info_setting">个人设置</string>
    <string name="dial_title_check_box">按键操作音</string>
    <string name="dial_summary_check_box">使用拨号键盘时播放按键音效</string>
    <string name="bell_title_list_preference">铃声</string>
    <string name="bell_summary_list_preference">自定义来电铃声</string>
    <string name="dialog_title_list_preference">dialog_title_list_preference</string>
    <string name="bell_settings">铃声设置</string>
    <string name="dial_setting">操作音设置</string>
    <string name="net_settings">网络设置</string>
    <string name="calling">呼叫</string>
    <string name="wifi_title_prefrence">Wi-Fi设置</string>
    <string name="wifi_summary_preference">设置和管理无线接入点</string>
    <string name="other_settings">其它设置</string>
    <string name="about_title_preference">关于神聊</string>
    <string name="newer_guide_preference">新手指引</string>
    <string name="sinobpo_display_preference">展柜</string>
</resources>
