<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout      
    xmlns:android="http://schemas.android.com/apk/res/android"   
	android:layout_width="wrap_content"        
	android:layout_height="wrap_content"        
	android:paddingLeft="20dip"        
	android:paddingTop="30dip"
	android:paddingRight="20dip"
	android:gravity="center_vertical">   
<LinearLayout
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:gravity="center_vertical">
	  	<LinearLayout
		  android:orientation="horizontal"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:background="@drawable/setting_dialog_item_bg"
		  android:gravity="center_vertical">
		    <Spinner android:layout_height="60dip"
		    	android:layout_width="fill_parent"
		    	android:id="@+id/spinner1"
		    	android:background="@drawable/setting_dialog_item_bg"/>
	    </LinearLayout>
	    <LinearLayout
		  android:orientation="horizontal"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:background="@drawable/setting_dialog_item_bg"
		  android:gravity="center_vertical"
		  android:layout_marginTop="6dip">
		  <TextView android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:id="@+id/nicke_name_label"
		  	android:text="@string/nicke_name_label"
		  	android:textColor="@color/black"/>
		  <EditText android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
		  	android:text=""
		  	android:maxLength="10"
		  	android:singleLine="true"
		  	android:id="@+id/nicke_name"
		  	android:hint="请输入你的昵称"/>
		</LinearLayout>
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/okBtn"
			android:text="@string/ok"
			android:background="@drawable/btn_setting_dialog_ok"
			android:textColor="@color/white"
			android:layout_marginTop="6dip"/>
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/cancelBtn"
			android:text="@string/cancel"
			android:background="@drawable/btn_setting_dialog_cancel"
			android:textColor="@color/white"
			android:layout_marginTop="6dip"/>
   </LinearLayout>
</RelativeLayout>
